--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -132,6 +132,8 @@ jobs:
           GIT_HASH: ${{ steps.slugify.outputs.sha }}
           GIT_BRANCH: ${{ steps.slugify.outputs.branch }}
         run: |
+          tree
+
           chmod +x ./gradlew
           ./gradlew assembleRelease \
             -Pcpuarch="${{ matrix.arch }}" \
