--- a/mk/android/build.gradle
+++ b/mk/android/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+// Is running in CI mode
+ext.ci = hasProperty("ci")
+
 if (hasProperty("cpuarch")) {
     ext.cpuarch = property("cpuarch").split()
 } else {
