ci: remove glew on 32bit linux

--- a/.github/workflows/gnulinux.yml
+++ b/.github/workflows/gnulinux.yml
@@ -130,7 +130,7 @@ jobs:
 
           # These libraries don't exist for 32-bit in Ubuntu repositories.
           vcpkg integrate install
-          vcpkg install --triplet x86-linux physfs glew libraqm
+          vcpkg install --triplet x86-linux physfs libraqm
 
           popd
 
