Allow for building without networking support
This allows for the "proper" ability to build without networking support. You
can use `-DENABLE_NETWORKING`

It also presumably fixes the fact that curl was technically always a required
dependency, but that is no longer the case.

I personally feel like we can just strip out the download file entirely and
remove its references, but since we use file globs this is slightly more work
;-/

Signed-off-by: Swagtoy <me@ow.swag.toys>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,6 +156,7 @@ if(CMAKE_SYSTEM_NAME MATCHES "Linux")
 endif()
 
 option(ENABLE_OPENGL "Enable OpenGL support" ON)
+option(ENABLE_NETWORKING "Turns on networking features, thus requiring libcurl" ON)
 
 # CI builds should never rely on this, as system SDL2_TTF has no RAQM support, causing Arabic to not be rendered properly.
 option(USE_SYSTEM_SDL2_TTF "Build SuperTux with system SDL2_TTF" OFF)
@@ -193,8 +194,10 @@ if(NOT EMSCRIPTEN)
     add_package(TARGET SDL2_ttf
       PKG SDL2_ttf PKG_USE SDL2_ttf::SDL2_ttf CONFIG REQUIRED PKG_CONFIG SDL2_ttf sdl2_ttf)
   endif()
-  add_package(TARGET libcurl
-    PKG CURL PKG_USE CURL::libcurl PKG_CONFIG libcurl)
+  if(ENABLE_NETWORKING)
+    add_package(TARGET libcurl
+      PKG CURL PKG_USE CURL::libcurl PKG_CONFIG libcurl)
+  endif()
   add_package(TARGET OpenAL
     PKG OpenAL PKG_USE OpenAL::OpenAL CONFIG REQUIRED PKG_CONFIG OpenAL openal)
   add_package(TARGET Ogg
@@ -235,7 +238,7 @@ set(USE_GL_LIBRARY "glew" CACHE STRING "Which OpenGL function library to choose 
 set_property(CACHE USE_GL_LIBRARY PROPERTY STRINGS glew libepoxy)
 
 set(HAVE_OPENGL NO)
-
+set(HAVE_CURL NO)
 set(HAVE_GLEW NO)
 set(HAVE_EPOXY NO)
 # OpenGL for Emscripten is added in Emscripten.cmake
@@ -445,8 +448,9 @@ if(NOT EMSCRIPTEN)
     VorbisFile
   )
 
-  if(ADDPKG_CURL_FOUND)
+  if(ADDPKG_CURL_FOUND AND ENABLE_NETWORKING)
     target_link_libraries(supertux2 PUBLIC libcurl)
+    set(HAVE_CURL YES)
   endif()
 
   if(HAVE_OPENGL)
