--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -246,11 +246,13 @@ set(HAVE_OPENGL NO)
 set(HAVE_CURL NO)
 set(HAVE_GLEW NO)
 set(HAVE_EPOXY NO)
-if(ANDROID)
+if(NOT ENABLE_OPENGL)
+  message(STATUS "OpenGL support is disabled, as requested.")
+elseif(ANDROID)
   # SDL already adds OpenGLES to the linker command
   set(HAVE_OPENGL YES)
   set(USE_OPENGLES2 YES)
-elseif(ENABLE_OPENGL AND NOT EMSCRIPTEN)
+elseif(NOT EMSCRIPTEN)
   set(OpenGL_GL_PREFERENCE "LEGACY")
   find_package(OpenGL QUIET)
 
