--- a/org.supertux.SuperTuxNightly.yml
+++ b/org.supertux.SuperTuxNightly.yml
@@ -29,6 +29,7 @@ modules:
       - -DINSTALL_SUBDIR_SHARE=share/supertux2
       - -DINSTALL_SUBDIR_BIN=bin
       - -DCMAKE_BUILD_TYPE=RelWithDebInfo
+      - -DFLATPAK=On
       - -DUSE_GL_LIBRARY=libepoxy
     sources:
       - type:   dir
