flatpak: Always prefer wayland, actually work now
it seems like x11 was not working, especially given i am on wayland right now,
so lets default to always preferring wayland for flatpaks (and hide the other option)

Signed-off-by: Swagtoy <me@ow.swag.toys>

--- a/config.h.in
+++ b/config.h.in
@@ -22,6 +22,7 @@
 #cmakedefine HAVE_EPOXY
 #cmakedefine USE_OPENGLES2
 #cmakedefine USE_OPENGLES1
+#cmakedefine FLATPAK
 
 #cmakedefine HAVE_CURL
 #cmakedefine ENABLE_NETWORKING
