mv out supertux --> mv usr supertux
I made a typo.

--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -98,7 +98,7 @@ jobs:
             cd $GITHUB_WORKSPACE/build
             mkdir upload
             cd out
-            mv out supertux
+            mv usr supertux
             tar -czvf $GITHUB_WORKSPACE/build/upload/SuperTux-FreeBSD-${{ matrix.freebsd_release }}-${{ matrix.build_type }}.tar.gz ./
 
       - name: Upload tar archives
