adjustments to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,12 +234,7 @@ if(ENABLE_DISCORD)
   add_subdirectory(external/discord-sdk EXCLUDE_FROM_ALL)
 endif()
 
-if(ANDROID)
-  set(USE_GL_LIBRARY_DEFAULT "libepoxy")
-else()
-  set(USE_GL_LIBRARY_DEFAULT "glew")
-endif()
-set(USE_GL_LIBRARY ${USE_GL_LIBRARY_DEFAULT} CACHE STRING "Which OpenGL function library to choose from (e.g. glew, libepoxy)")
+set(USE_GL_LIBRARY "glew" CACHE STRING "Which OpenGL function library to choose from (e.g. glew, libepoxy)")
 set_property(CACHE USE_GL_LIBRARY PROPERTY STRINGS glew libepoxy)
 
 set(HAVE_OPENGL NO)
@@ -256,7 +251,7 @@ elseif(NOT EMSCRIPTEN)
   set(OpenGL_GL_PREFERENCE "LEGACY")
   find_package(OpenGL QUIET)
 
-  if(OPENGL_FOUND OR ANDROID)
+  if(OPENGL_FOUND)
     if (USE_GL_LIBRARY STREQUAL "glew")
       message(STATUS "Using glew")
       add_package(TARGET GLEW
@@ -274,16 +269,15 @@ elseif(NOT EMSCRIPTEN)
     else()
       message(FATAL_ERROR "An invalid GL library was chosen! Got \"${USE_GL_LIBRARY}\"")
     endif()
+    if(HAVE_OPENGL)
+      message(STATUS "OpenGL & ${USE_GL_LIBRARY} found! Enabling OpenGL support.")
+    else()
+      message(STATUS "${USE_GL_LIBRARY} not found! OpenGL support is disabled.")
+    endif()
   else()
     message(STATUS "OpenGL not found! OpenGL support is disabled.")
   endif()
 
-
-  if(HAVE_OPENGL AND OPENGL_FOUND)
-    message(STATUS "OpenGL & ${USE_GL_LIBRARY} found! Enabling OpenGL support.")
-  elseif(OPENGL_FOUND)
-    message(STATUS "${USE_GL_LIBRARY} not found! OpenGL support is disabled.")
-  endif()
 endif()
 
 ## Build stuff
