Why does everything I touch turn into an hour-long debugging session. Why can't computers simply vibe-code themselves and FEEL what a programmer needs? You know like when you FEEL what your wife wants for valentine's day? You wouldn't just show up with a block of concrete for that unless you're completely emotionally colourblind. In that case, I would assume your wife's reaction would be divorce.

--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -53,6 +53,11 @@ jobs:
           ./emsdk activate latest
 
           vcpkg update
+
+          pushd $VCPKG_ROOT
+          git pull
+          popd $VCPKG_ROOT
+
           vcpkg integrate install
 
       - name: Use cached dependencies
