--- a/mk/android/build.gradle
+++ b/mk/android/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+ext.bundle = false
 for (String task : gradle.startParameter.getTaskNames()) {
     if (task.startsWith("bundle")) {
         ext.bundle = true
